--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,3 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+    font-family: 'Inter', sans-serif;
+    scroll-behavior: smooth;
+    scroll-padding-top: 4.5rem;
+}
+
